# licensecc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
include/licensecc/: datatypes.h
install/: CMakeLists.txt  install_boost.cmake  install_openssl.cmake  install_valgrind.cmake
